# IdeaExploration

./: .gitignore  CLAUDE.md  README.md  config.example.toml  pyproject.toml
.omc/plans/: MASTER-PLAN.md  ideagen-feature-gaps.md  ideagen-implementation.md  open-questions.md  phase9-test-coverage.md  prd-ideagen.md
.omc/research/: high-wtp-segments.md
docs/: DECISIONS.md  PLAN.md  STATUS.md
ideagen/: __init__.py  __main__.py
ideagen/cli/: app.py  async_bridge.py  callbacks.py  config_loader.py  formatters.py  schedule_store.py
ideagen/core/: comparison.py  config.py  dedup.py  exceptions.py  models.py  nl_interpreter.py  pipeline.py  prompts.py  service.py  wtp_segments.py
ideagen/providers/: base.py  claude.py  dry_run.py  gemini.py  openai_provider.py  registry.py
ideagen/sources/: base.py  hackernews.py  producthunt.py  reddit.py  registry.py  twitter.py
ideagen/storage/: base.py  json_export.py  schema.py  sqlite.py
ideagen/utils/: logging.py  rate_limiter.py  retry.py  text.py
ideagen/web/: __init__.py  app.py  dependencies.py  run_registry.py
tests/: conftest.py
tests/cli/: test_ask.py  test_async_bridge.py  test_callbacks.py  test_cli_e2e.py  test_compare.py  test_config_loader.py  test_formatters.py  test_history.py  test_history_show.py  test_interactive.py  test_interactive_nl.py  test_prompts_cmd.py  test_run.py  test_schedule.py  test_sources_list.py  test_spinner.py
tests/core/: test_abcs.py  test_comparison.py  test_config.py  test_dedup.py  test_models.py  test_nl_interpreter.py  test_pipeline.py  test_prompts.py  test_service.py  (+2 more)
(+58 files in other folders)
